style: fixed edit container z-index

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -436,7 +436,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 150;
+  z-index: 9999999;
   background-color: rgba(0, 0, 0, 0.85);
   padding: 1.4rem;
   overflow: auto;
